- Add real blog content  - Styling and template updates for blog content  - Fix spacing for footer (was inside blog content) with a clear: both;  - Use 'q' elements for quotes

--- a/public/less/portfolio.less
+++ b/public/less/portfolio.less
@@ -23,15 +23,16 @@
 	letter-spacing: 1pt;
 }
 
-.quote {
+q {
 	font-style: oblique;
+	display: block;
 }
 
-.quote:before {
+q:before {
 	content: "“";
 }
 
-.quote:after {
+q:after {
 	content: "”";
 }
 
@@ -68,7 +69,7 @@ p.slogan {
 	color: @orange;
 }
 
-p#last_tweet {
+header q {
 	float: right;
 	text-align: right;
 	font-size: @secondary_base_font_size;
@@ -120,7 +121,6 @@ nav #highlight {
 /* Blog */
 
 section.maincontent {
-	min-height: 1000px;
 	padding-top: 20px;
 	.centered_on_page;
 } 
@@ -134,9 +134,32 @@ article {
 	margin-bottom: 100px;
 }
 
-article > p {
+article time {
+	font-style: oblique;
+}
+
+article p {
 	text-align: justify; 
 	text-justify: newspaper;
+	padding: 10px 0;
+}
+
+article q {
+	font-size: @primary_base_font_size * @golden_ratio;
+	padding: 0 25px;
+}
+
+article q strong {
+	font-weight: normal;
+	text-decoration: underline;
+}
+
+article aside {
+	font-size: @secondary_base_font_size;
+}
+
+article footer {
+	font-style: oblique;
 }
 
 /* Sidebar */
@@ -208,7 +231,7 @@ p.description {
 	font-size: @secondary_base_font_size;
 }
 
-footer {
+body > footer {
 	min-height: 300px;
 	padding-top: 50px;
 	margin-top: 100px;
@@ -217,7 +240,7 @@ footer {
 	text-align: center;
 }
 
-footer p {
+body > footer p {
 	font-size: @secondary_base_font_size / @golden_ratio;
 	padding-top: 10px;
 	.uppercase;
